Fix issue with the home page and 100vh being too big on mobile (replaced with svh)

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,16 +22,20 @@ header {
   //top: -54px;
   width: 100%;
   height: 100vh;
-  min-height: 530px;
+  height: 100svh;
+  //min-height: 530px;
 }
 
-.image-bg, .image-bg-overlay, .hero-front {
+.image-bg,
+.image-bg-overlay,
+.hero-front {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  min-height: 530px;
+  height: 100svh;
+  min-height: 490px;
 }
 
 .image-bg {
@@ -65,7 +69,8 @@ header {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 } */
 
-.hero-front h1, h1.page-title {
+.hero-front h1,
+h1.page-title {
   font-weight: bolder;
   letter-spacing: 12px;
   text-transform: uppercase;
@@ -139,7 +144,9 @@ header {
 }
 
 /** Parallax stuff **/
-.pimg1, .pimg2, .pimg3 {
+.pimg1,
+.pimg2,
+.pimg3 {
   position: relative;
   opacity: 0.70;
   background-position: center;
@@ -165,13 +172,15 @@ header {
   background-image: url('../../static/par3.jpg');
   min-height: 300px;
 }
+
 /** End of parallax stuff **/
 
 .lnk-button {
   cursor: pointer;
 }
 
-span.carousel-control-prev-icon, span.carousel-control-next-icon {
+span.carousel-control-prev-icon,
+span.carousel-control-next-icon {
   transform: scale(3);
 }
 
@@ -214,25 +223,42 @@ footer {
 }
 
 @keyframes lul {
-  0% {transform: rotate(0deg);}
-  50% {transform: rotate(180deg);}
-  100% {transform: rotate(360deg);}
+  0% {
+    transform: rotate(0deg);
+  }
+
+  50% {
+    transform: rotate(180deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes slip {
-  0% {transform: translateY(0px);}
-  50% {transform: translateY(15px);}
-  100% {transform: translateY(0px);}
+  0% {
+    transform: translateY(0px);
+  }
+
+  50% {
+    transform: translateY(15px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
 }
 
 @keyframes fadeInDown {
   0% {
-   opacity: 0;
-   transform: translateY(-20px)
+    opacity: 0;
+    transform: translateY(-20px)
   }
+
   100% {
-   opacity: 1;
-   transform: translateY(0)
+    opacity: 1;
+    transform: translateY(0)
   }
 }
 
@@ -240,6 +266,7 @@ footer {
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
@@ -260,7 +287,9 @@ and hiding the navbar image
 }
 
 @include media-breakpoint-up(xs) {
-  .hero-front h1, h1.page-title {
+
+  .hero-front h1,
+  h1.page-title {
     font-size: 1.8rem;
   }
 
@@ -275,7 +304,9 @@ and hiding the navbar image
 }
 
 @include media-breakpoint-up(sm) {
-  .hero-front h1, h1.page-title {
+
+  .hero-front h1,
+  h1.page-title {
     font-size: 2.5rem;
   }
 
@@ -290,7 +321,9 @@ and hiding the navbar image
 }
 
 @include media-breakpoint-up(md) {
-  .hero-front h1, h1.page-title {
+
+  .hero-front h1,
+  h1.page-title {
     font-size: 3rem;
   }
 
@@ -305,7 +338,9 @@ and hiding the navbar image
 }
 
 @include media-breakpoint-up(lg) {
-  .hero-front h1, h1.page-title {
+
+  .hero-front h1,
+  h1.page-title {
     font-size: 4rem;
   }
 
